# ED22-02-Cortes-Castillo

./: CMakeLists.txt  README.md  README.md.url  Video explicativo.txt
src/: main.cpp
src/logic/: Detector.cpp  ListaPersonas.cpp  NodoPersona.cpp  Persona.cpp
src/logic/includes/: Detector.h  ListaPersonas.h  NodoPersona.h  Persona.h
